# Monalog

./: .envrc  .gitignore  LICENSE  Makefile  README.md  flake.nix  monalog.cabal
app/: Main.hs
nix/: hix.nix
src/: App.hs  AttrMap.hs  Buffer.hs  Column.hs  Config.hs  Consts.hs  Handler.hs  Path.hs  Query.hs  System.hs  Text.hs  Ui.hs  Vty.hs
src/Copy/: Native.hs  Osc52.hs
src/Query/: Eval.hs  Parser.hs  Pretty.hs
src/SourceFormat/: Csv.hs  Json.hs  Utils.hs
src/Type/: AppState.hs  AvailableSpace.hs  Config.hs  Event.hs  Field.hs  Log.hs  LogViewPosition.hs  MaxWidth.hs  Name.hs  Sort.hs  TBool.hs  WidgetSize.hs  With.hs
src/Widgets/: Checkbox.hs  Editor.hs  Types.hs
src/Widgets/Dialog/: Handler.hs  Types.hs  Ui.hs
src/Widgets/Error/: Handler.hs  Types.hs  Ui.hs
src/Widgets/Fields/: Handler.hs  Types.hs  Ui.hs
src/Widgets/LogView/: Handler.hs  Tokenize.hs  Types.hs  Ui.hs
src/Widgets/LogsView/: Handler.hs  Types.hs  Ui.hs
src/Widgets/Query/: Handler.hs  Types.hs  Ui.hs
src/Widgets/Scrollbar/: Horizontal.hs  Vertical.hs
src/Widgets/StatusBar/: Handler.hs  Types.hs  Ui.hs
